[frontend]fix animation scrollbar bug

--- a/src/app/front/front.component.scss
+++ b/src/app/front/front.component.scss
@@ -51,6 +51,7 @@
                 padding-right: 5px;
             }
         }
+      
     }
 
 }
@@ -59,6 +60,7 @@
     transform: none !important;
     margin-top: 50px;
     background: white;
+    overflow: hidden
 }
 .self-image {
   background-image: url('../../assets/img/city.jpg');
